--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,15 +26,15 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                Renato Gama<br />
+                Computer Engineer<br />
+                renatoargh@gmail.com
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/renatoargh">github.com/renatoargh</a><br />
+                <a href="https://twitter.com/renatoargh">twitter.com/renatoargh</a><br />
               </p>
             </div>
           </div>
