--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,14 @@
               <p>
                 Renato Gama<br />
                 Computer Engineer<br />
-                renatoargh@gmail.com
+                <a href="mailto:renatoargh@gmail.com">renatoargh@gmail.com</a>
               </p>
             </div>
             <div class="contact">
               <p>
                 <a href="https://github.com/renatoargh">github.com/renatoargh</a><br />
                 <a href="https://twitter.com/renatoargh">twitter.com/renatoargh</a><br />
+                <a href="http://stackoverflow.com/users/91403/renatoargh"><img src="http://stackoverflow.com/users/flair/91403.png" width="208" height="58" alt="profile for renatoargh at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for renatoargh at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
               </p>
             </div>
           </div>
