--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,11 @@
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+            
             <a class="extra" href="/">home</a>
+            {% for page in site.pages %}
+                <a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor % } <!-- page -->
           </div>
 
           {{ content }}
