--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
             <a class="extra" href="/">home</a>
             {% for page in site.pages %}
                 <a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor % } <!-- page -->
+            {% endfor %}
           </div>
 
           {{ content }}
