--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             
             <a class="extra" href="/">home</a>
             {% for page in site.pages %}
-                <a href="{{ page.url }}">{{ page.title }}</a></li>
+                <a class="extra" href="{{ page.url }}">{{ page.title }}</a></li>
             {% endfor %}
           </div>
 
