--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             
-            <a class="extra" href="/">home</a>
+            <a class="extra" href="/">Home</a>
             {% for page in site.pages %}
             {% if page.url != '/index.html' %}
                 <a class="extra" href="{{ page.url.toLowerCase() }}">{{ page.title }}</a></li>
