--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,9 @@
                 <a href="mailto:renatoargh@gmail.com">renatoargh@gmail.com</a>
               </p>
             </div>
-            <a href="http://stackoverflow.com/users/91403/renatoargh"><img src="http://stackoverflow.com/users/flair/91403.png" width="208" height="58" alt="profile for renatoargh at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for renatoargh at Stack Overflow, Q&amp;A for professional and enthusiast programmers" align="right"></a>
+            <div class="contact">
+                <a href="http://stackoverflow.com/users/91403/renatoargh"><img src="http://stackoverflow.com/users/flair/91403.png" width="208" height="58" alt="profile for renatoargh at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for renatoargh at Stack Overflow, Q&amp;A for professional and enthusiast programmers" align="right"></a>
+            </div>
           </div>
         </div>
 
