--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
           </div>
 
           {{ content }}
+          {{ page.url }}
 
           <div class="footer">
             <div class="contact">
