--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,15 +20,19 @@
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             
             <a class="extra" href="/">Home</a>
-            {% for page in site.pages %}
-            {% if page.url != '/index.html' %}
+            {% for blogPage in site.pages %}
+            {% if blogPage.url != '/index.html' %}
+            {% if page.url == blogPage.url %}
+                <a class="active" href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endif %}
+            {% if page.url != blogPage.url %}
                 <a class="extra" href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endif %}
             {% endif %}
             {% endfor %}
           </div>
 
           {{ content }}
-          {{ page.url }}
 
           <div class="footer">
             <div class="contact">
