--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,10 @@
             {% for blogPage in site.pages %}
             {% if blogPage.url != '/index.html' %}
             {% if page.url == blogPage.url %}
-                <a class="active" href="{{ blogPage.url }}">{{ page.title }}</a></li>
+                <a class="active" href="{{ blogPage.url }}">{{ blogPage.title }}</a></li>
             {% endif %}
             {% if page.url != blogPage.url %}
-                <a class="extra" href="{{ blogPage.url }}">{{ page.title }}</a></li>
+                <a class="extra" href="{{ blogPage.url }}">{{ blogPage.title }}</a></li>
             {% endif %}
             {% endif %}
             {% endfor %}
