--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ a:visited { color: #a0a; }
   margin-left: 1em;
 }
 
-.header a.extra:hover, .active {
+.header a.extra:hover {
   color: #000;
 }
 
