--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,14 +20,9 @@
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             
             <a class="extra" href="/">Home</a>
-            {% for blogPage in site.pages %}
+            {% for page in site.pages %}
             {% if blogPage.url != '/index.html' %}
-            {% if page.url == blogPage.url %}
-                <a class="active" href="{{ blogPage.url }}">{{ blogPage.title }}</a></li>
-            {% endif %}
-            {% if page.url != blogPage.url %}
                 <a class="extra" href="{{ blogPage.url }}">{{ blogPage.title }}</a></li>
-            {% endif %}
             {% endif %}
             {% endfor %}
           </div>
