--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,10 @@ layout: default
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
+<div class="post" style="margin-bottom: 15px;">
 {{ content }}
 </div>
-<hr />
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'renatogama'; // required: replace example with your forum shortname
